--- a/Frontpage.html
+++ b/Frontpage.html
@@ -268,7 +268,7 @@
     <img src="https://via.placeholder.com/300x300" alt="Dr. John Doe">
     <div class="about-text">
       <h2>Meet Dr. John Doe</h2>
-      <p>Dr. John Doe is a board-certified general physician with over 15 years of experience in providing compassionate care to patients of all ages in [City]. His mission is to ensure holistic health for every patient.</p>
+      <p>Dr. John Doe is a board-certified general physician with over 15 years of experience in providing compassionate care to patients of all ages in Delhi. His mission is to ensure holistic health for every patient.</p>
     </div>
   </section>
 
